# Hero_Realms_ProjetCpp

./: CMakeLists.txt  Makefile  README.md  REGLES_IMPLEMENTATION.md  compile.ps1  main.cpp
include/: Ability.h  Card.h  Carte.hpp  CarteDansZone.hpp  CarteEffet.hpp  Champion.hpp  Common.h  Containers.h  Effects.h  Effet.hpp  Joueur.hpp  TablePartie.hpp  ZoneDeCarte.hpp  game.h
include/Game/Cartes/: Action.hpp  Carte.hpp  CarteData.hpp  Champion.hpp  Objet.hpp
include/Game/Core/: GameController.hpp  GameView.hpp  Joueur.hpp  Partie.hpp  Phase.hpp
include/Game/Systeme/: Capacite.hpp  Effet.hpp  Faction.hpp  Ressources.hpp
include/Game/Utils/: SimpleRng.h
include/Game/Zones/: Marche.hpp  TablePartie.hpp  ZoneDeCarte.hpp
src/: SimpleRng.h
src/Game/Cartes/: Action.cpp  Carte.cpp  CarteData.cpp  Champion.cpp  Objet.cpp
src/Game/Core/: GameController.cpp  GameView.cpp  Joueur.cpp  Partie.cpp
src/Game/Systeme/: Capacite.cpp  Effet.cpp  Effet_data.cpp  Faction.cpp  Ressources.cpp
src/Game/Utils/: SimpleRng.cpp
src/Game/Zones/: Marche.cpp  TablePartie.cpp  ZoneDeCarte.cpp
